--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: linear-gradient(to right, #fc88ab 0%, #fce357 100%);
+}
+
+.search-form {
+  height: 10vh;
+  width: 70vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-bar {
+  width: 50%;
+  border: none;
+  padding: 10px;
+  font-size: large;
+  border-radius: 10px 0 0 10px;
+  outline: none;
+}
+
+.search-button {
+  background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  font-size: large;
+  border-radius: 0 10px 10px 0;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-image: linear-gradient(-20deg, #f84d64 0%, #fc8a26 100%);
+}
+
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  top: 10vh;
+  position: relative;
+  background-image: linear-gradient(to right, #fc88ab 0%, #fce357 100%);
+}
+
+.home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-logo {
+  width: 15%;
+  margin-bottom: 5vh;
+}
+
+.placeholder {
+  height: 20vh;
+  width: 100%;
+}
+
+.search-form-container {
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 8;
+  background-image: linear-gradient(to right, #fc88ab 0%, #fce357 100%);
+}
+
+.search-logo {
+  position: fixed;
+  top: 0;
+  z-index: 9;
+  height: 8vh;
+  margin-left: 3vw;
+  cursor: pointer;
 }
